# cordon-orchestrator

./: .gitignore  README.md  pyproject.toml  test_requirements.txt
python/: pyproject.toml
python/src/cordon/: __init__.py  orchestrator.py
python/src/cordon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/src/cordon/agents/: __init__.py  agent.py  amazon_bedrock_agent.py  anthropic_agent.py  bedrock_flows_agent.py  bedrock_inline_agent.py  bedrock_llm_agent.py  bedrock_translator_agent.py  chain_agent.py  comprehend_filter_agent.py  generic_llm_agent.py  lambda_agent.py  lex_bot_agent.py  openai_agent.py  researcher_agent.py  strands_agent.py  supervisor_agent.py
python/src/cordon/classifiers/: __init__.py  anthropic_classifier.py  bedrock_classifier.py  classifier.py  openai_classifier.py
python/src/cordon/retrievers/: __init__.py  amazon_kb_retriever.py
python/src/cordon/shared/: __init__.py  user_agent.py
python/src/cordon/storage/: __init__.py  chat_storage.py  dynamodb_chat_storage.py  in_memory_chat_storage.py  sql_chat_storage.py
python/src/cordon/types/: __init__.py  types.py
python/src/cordon/utils/: __init__.py  helpers.py  logger.py  tool.py  web_scraper.py
python/src/tests/: test_coder_webscraping.py  test_command_execution.py  test_context_passing.py  test_context_with_webscraping.py  test_frontend_coder_webscraping.py  test_frontend_webscraping.py  test_orchestrator.py  test_paper_reading.py  test_task_orchestrator.py  test_webscraping.py
python/src/tests/agents/: test_generic_llm_agent.py
python/src/tests/utils/: test_logger.py
(+62 files in other folders)
