[build-system]
   requires = ["setuptools>=72.1"]
   build-backend = "setuptools.build_meta"

[project]
name = "cordon"
version = "0.0.1"
description = "Multi-agent orchestrator with web frontend"
requires-python = ">=3.9"

# Core dependencies
dependencies = [
    "boto3>=1.26.0",
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "strands-agents==1.5.0",
    "libsql-client>=0.1.0",
    "requests>=2.28.0",
]

# Frontend dependencies
[project.optional-dependencies]
frontend = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "moto>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.11.4",
]

# All dependencies (core + frontend + dev)
all = [
    "cordon[frontend,dev]",
]

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["src"]