[build-system]
   requires = ["setuptools>=72.1"]
   build-backend = "setuptools.build_meta"

[project]
name = "cordon"
version = "0.0.1"
description = "Agents"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.packages.find]
where = ["python/src"]
